--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ Remove the margin in all browsers.
 body {
   margin: 0;
   padding: 0;
-  font-family: "Cascadia Code", "JetBrains Mono", monospace;
+  font-family: "JetBrains Mono", monospace;
 }
 
 /**
